syntax = "proto3";
import "com/oracle/techarch/Model.proto";
option java_package = "com.oracle.techarch.grpc";

service StringService {
  rpc Upper (StringMessage) returns (StringMessage) {}                  // (Unary)
  rpc Lower (StringMessage) returns (StringMessage) {}                  // (Unary)
  rpc Split (StringMessage) returns (stream StringMessage) {}           // (Server Streaming)
  // rpc Join (stream StringMessage) returns (StringMessage) {}            // (Client Streaming)
  // rpc Echo (stream StringMessage) returns (stream StringMessage) {}     // (Bidirectional Streaming)

  //     public StreamObserver<StringMessage> echoWithSplit(StreamObserver<StringMessage> responseObserver) {
  rpc EchoWithSplit(stream StringMessage) returns (stream StringMessage) {}
}



